[#299] refactor(PromotionSchedulerService): 캐러셀 삭제 로직 개선